[package]
name = "stm32-flash-programmer-cli"
version = "0.1.0"
description = "STM32 flash programmer command line tool for a custom bootloader"
repository = "https://github.com/wikcioo/stm32-flash-programmer-cli.git"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
regex = "1.7.1"
